--- a/mod/thmod/localisation/english/ancient_relics_l_english.yml
+++ b/mod/thmod/localisation/english/ancient_relics_l_english.yml
@@ -190,9 +190,9 @@
  STAGE_ZERO:0 "§HSite Summary§!"
  STAGE_HELP:0 "§GClick to view stage events and rewards§!"
  ARCHAEOLOGICAL_SITE_ASSIGN_SCIENTIST:0 "§Hกำหนดนักวิทยาศาสตร์เพื่อเริ่มการขุดค้น§!"
- ARCHAEOLOGICAL_SITE_MAPICON_TT:0 "$NAME|H$\n$DESC$\n\n§GClick to view Archaeological Site§!"
- CANNOT_EXCAVATE_OUTSIDE_EMPIRE_BORDERS:0 "$TRIGGER_FAIL$§Rไม่สามารถขุดแหล่งโบราณคดีนอกจักรวรรดิของคุณได้§!"
- CANNOT_EXCAVATE_WITHOUT_VALID_LEADER:0 "$TRIGGER_FAIL$§Rไม่สามารถขุดแหล่งโบราณคดีโดยที่ไม่มีผู้นำได้§!"
+ ARCHAEOLOGICAL_SITE_MAPICON_TT:0 "$NAME|H$\n$DESC$\n\n§Gคลิกเพื่อดูแหล่งโบราณคดี§!"
+ CANNOT_EXCAVATE_OUTSIDE_EMPIRE_BORDERS:0 "$TRIGGER_FAIL$§Rไม่สามารถขุดค้นแหล่งโบราณคดีนอกจักรวรรดิของคุณได้§!"
+ CANNOT_EXCAVATE_WITHOUT_VALID_LEADER:0 "$TRIGGER_FAIL$§Rไม่สามารถขุดค้นแหล่งโบราณคดีโดยที่ไม่มีผู้นำได้§!"
  ARC_DIFFICULTY_TYPE:0 "ความยาก"
  ARC_DIFFICULTY_TYPE_DESC:0 "Each chapter in an archaeological site can have a different difficulty value. Difficulty will reduce the likelihood of getting successful results at the end of an excavation phase."
  ARC_DIFFICULTY_TYPE_TT:0 "§H$ARC_DIFFICULTY_TYPE$§!\n$VALUE$\n\n$ARC_DIFFICULTY_TYPE_DESC$"
