--- a/mod/thmod/localisation/english/distant_stars_l_english.yml
+++ b/mod/thmod/localisation/english/distant_stars_l_english.yml
@@ -1991,8 +1991,8 @@
  empire_xenophile:0 "$TRIGGER_FAIL$Our empire values xeno species too highly."
  FLEET_RESEARCH_PROJECT_EFFECT:0 "Send fleet $FLEET$ to research $PROJECT$"
  LGATE_COUNTRY_CANNOT_USE:0 "$TRIGGER_FAIL$ We do not have the means to enter the §YL-Cluster§!."
- BYPASS_DESC_INACTIVE_LGATE_DISABLED:0 "Requires activation by gathering §Y$clues$§!."
- BYPASS_DESC_INACTIVE_LGATE:0 "Requires activation by gathering §Y$clues$§!."
+ BYPASS_DESC_INACTIVE_LGATE_DISABLED:0 "ต้องเปิดใช้งานโดยการรวบรวม §Y$clues$§!"
+ BYPASS_DESC_INACTIVE_LGATE:0 "ต้องเปิดใช้งานโดยการรวบรวม §Y$clues$§!"
  FLEETORDER_RESEARCH_ANOMALIES:0 "วิจัยความผิดปกติในระบบ"
  NO_ANOMALIES_IN_SYSTEM:0 "No anomaly in $SYSTEM|Y$ can be researched"
  FLEETORDER_RESEARCH_ANOMALIES_IN_SYSTEM_DESC:0 "วิจัยทุกๆความผิดปกติในระบบ $SYSTEM|Y$"
