--- a/mod/thmod/localisation/english/federations_l_english.yml
+++ b/mod/thmod/localisation/english/federations_l_english.yml
@@ -186,10 +186,10 @@
  IS_NOT_PROPOSING_RESOLUTION:0 "$COUNTRY|Y$ is NOT proposing $RESOLUTION|Y$"
  IS_YEARS_SINCE_COMMUNITY_FORMATION:0 "จำนวนปีตั้งแต่$GALACTIC_COMMUNITY$ก่อตั้ง $COMPARE$ $NUM_COMPARE$"
  IS_NOT_YEARS_SINCE_COMMUNITY_FORMATION:0 "จำนวนปีตั้งแต่$GALACTIC_COMMUNITY$ก่อตั้ง ไม่$COMPARE$ $NUM_COMPARE$"
- IS_YEARS_SINCE_COUNCIL_ESTABLISHMENT:0 "Years since $GALACTIC_COUNCIL$ establishment is $COMPARE$ $NUM_COMPARE$"
- IS_NOT_YEARS_SINCE_COUNCIL_ESTABLISHMENT:0 "Years since $GALACTIC_COUNCIL$ establishment is NOT $COMPARE$ $NUM_COMPARE$"
- IS_NUM_COUNCIL_POSITIONS:1 "Number of $GALACTIC_COUNCIL$ positions is $COMPARE$ $NUM_COMPARE$"
- IS_NOT_NUM_COUNCIL_POSITIONS:1 "Number of $GALACTIC_COUNCIL$ positions is NOT $COMPARE$ $NUM_COMPARE$"
+ IS_YEARS_SINCE_COUNCIL_ESTABLISHMENT:0 "จำนวนปีตั้งแต่ $GALACTIC_COUNCIL$ จัดตั้ง $COMPARE$ $NUM_COMPARE$"
+ IS_NOT_YEARS_SINCE_COUNCIL_ESTABLISHMENT:0 "จำนวนปีตั้งแต่ $GALACTIC_COUNCIL$ จัดตั้ง ไม่$COMPARE$ $NUM_COMPARE$"
+ IS_NUM_COUNCIL_POSITIONS:1 "จำนวนตำแหน่งของ $GALACTIC_COUNCIL$ $COMPARE$ $NUM_COMPARE$"
+ IS_NOT_NUM_COUNCIL_POSITIONS:1 "จำนวนตำแหน่งของ $GALACTIC_COUNCIL$ ไม่$COMPARE$ $NUM_COMPARE$"
  IS_COMMUNITY_RANK:1 "$GALACTIC_COMMUNITY$ rank is $COMPARE$ $NUM_COMPARE$"
  IS_NOT_COMMUNITY_RANK:1 "$GALACTIC_COMMUNITY$ rank is NOT $COMPARE$ $NUM_COMPARE$"
  IS_COMMUNITY_FORMED:0 "$GALACTIC_COMMUNITY$ ถูกก่อตั้งขึ้นแล้ว"
