--- a/mod/thmod/localisation/english/first_contact_l_english.yml
+++ b/mod/thmod/localisation/english/first_contact_l_english.yml
@@ -1062,7 +1062,7 @@
  a_military_theory:0 "a military theory"
  a_new_worlds:0 "a new worlds"
  a_psionics:0 "a psionics"
- a_statecraft:0 "a statecraft"
+ a_statecraft:0 "การปกครอง"
  a_industry:0 "a industry"
  a_materials:0 "a materials"
  a_propulsion:0 "a propulsion"
