--- a/mod/thmod/localisation/english/megacorp_l_english.yml
+++ b/mod/thmod/localisation/english/megacorp_l_english.yml
@@ -1657,7 +1657,7 @@
  mod_planet_soldiers_unity_produces_add:1 "£unity£ $unity$ จาก £job_soldier£ [GetSoldierPlural]"
  mod_planet_soldiers_energy_upkeep_add:0 "£energy£ $energy$ ที่เป็นค่าบำรุงรักษาของ £job_soldier£ [GetSoldierPlural]"
  mod_planet_entertainers_produces_mult:0 "ทรัพยากรจาก [GetEntertainerPluralWithIcon]"
- mod_planet_entertainers_unity_produces_add: "£unity£ $unity$ from [GetEntertainerPluralWithIcon]"
+ mod_planet_entertainers_unity_produces_add: "£unity£ $unity$ จาก [GetEntertainerPluralWithIcon]"
  mod_station_gatherers_produces_mult:0 "ผลผลิตของสถานีเหมืองแร่"
  mod_station_researchers_produces_mult:0 "ผลผลิตของสถานีวิจัย"
  MOD_COUNTRY_ADMIN_CAP_ADD:1 "ความสามารถในการบริหาร"
@@ -2923,10 +2923,10 @@
  LEADER_TOP_BAR_ITEM_ENVOY_FORMAT:0 "ทูต ($ASSIGNED$/$TOTAL$)"
  LEADER_TOP_BAR_ITEM_LEADER_FORMAT:0 "$LEADERTYPE$ ($TOTAL|Y$)"
  LEADER_TOP_BAR_TT_LEADER_ENTRY:0 "$NAME|Y$\n$ACTION$"
- OPEN_LEADER_VIEW:0 "§GClick to view $CLASS_PLURAL|Y$§!"
+ OPEN_LEADER_VIEW:0 "§Gคลิกเพื่อดู $CLASS_PLURAL|Y$§!"
  OPEN_LEADER_VIEW_NO_CLASS:0 "§GClick to open Leader View§!"
- OPEN_ENVOY_VIEW:0 "§GClick to open Envoy Assignment View§!"
- NUM_AVAILABLE_ENVOYS:0 "Available Envoys: $NUM|Y$"
+ OPEN_ENVOY_VIEW:0 "§Gคลิกเพื่อเปิดหน้าต่างแต่งตั้งทูต§!"
+ NUM_AVAILABLE_ENVOYS:0 "มีทูต: $NUM|Y$"
  matter_decompressor_0:1 "$matter_decompressor_4$ (ขั้นที่0:ที่ตั้ง)"
  matter_decompressor_0_DESC:0 "The construction site station serves as the base for the future construction of a $matter_decompressor_1$."
  matter_decompressor_0_MEGASTRUCTURE_DETAILS:3 "The §Y$matter_decompressor_4$§! lenses a black hole's gravity, forming a drill of gravitational forces to retrieve £minerals£ Minerals from the singularity."
