--- a/mod/thmod/localisation/english/paragon_4_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_4_l_english.yml
@@ -841,13 +841,13 @@
  leader_trait_passive_machine_desc:1 "This unit displays an inability to respond proactively."
  leader_trait_emotional_support_pet_hive:0 "Emotional Support Symbiont"
  leader_trait_emotional_support_pet_hive_desc:1 "Through the chemical secretions of a mutualistic symbiont, this node promotes well-being within the hive."
- subclass_governor_pioneer_hive:0 "Pioneer Drone"
+ subclass_governor_pioneer_hive:0 "โดรนผู้บุกเบิก"
  subclass_governor_pioneer_hive_desc:1 "Preparing new worlds for the hive is a dangerous and costly. This drone knows how to mitigate those risks."
- subclass_governor_pioneer_machine:0 "Pioneer Unit"
+ subclass_governor_pioneer_machine:0 "ยูนิตผู้บุกเบิก"
  subclass_governor_pioneer_machine_desc:1 "Integrating new worlds into the network is dangerous and costly. This unit is programmed to mitigate such risks."
- subclass_governor_economist_hive:0 "Production Oversight"
+ subclass_governor_economist_hive:0 "กำกับดูแลการผลิต"
  subclass_governor_economist_hive_desc:1 "This drone was selectively bred to guide drones who require assistance in the production process."
- subclass_governor_economist_machine:0 "Efficiency Loop"
+ subclass_governor_economist_machine:0 "ลูปที่มีประสิทธิภาพ"
  subclass_governor_economist_machine_desc:1 "This unit is equipped to isolate and delete inefficient production patterns."
  leader_trait_agrarian_upbringing_2_hive:0 "$leader_trait_agrarian_upbringing_hive$ II"
  leader_trait_agrarian_upbringing_2_hive_desc:0 "$leader_trait_agrarian_upbringing_hive_desc$"
@@ -911,7 +911,7 @@
  leader_trait_expertise_computing_hive_desc:0 "This node is focused on discovering new technologies within the field of Computing."
  leader_trait_expertise_new_worlds_hive:0 "Expertise: New Worlds"
  leader_trait_expertise_new_worlds_hive_desc:1 "This node is focused on discovering new technologies for settling New Worlds."
- leader_trait_expertise_statecraft_hive:0 "Expertise: Statecraft"
+ leader_trait_expertise_statecraft_hive:0 "เชี่ยวชาญ: การปกครอง"
  leader_trait_expertise_statecraft_hive_desc:0 "This node is focused on discovering new technologies within the field of Statecraft."
  leader_trait_expertise_biology_hive:0 "Expertise: Biology"
  leader_trait_expertise_biology_hive_desc:0 "This node is focused on discovering new technologies within the field of Biology."
@@ -937,7 +937,7 @@
  leader_trait_expertise_computing_machine_desc:0 "This unit is focused on discovering new technologies within the field of Computing."
  leader_trait_expertise_new_worlds_machine:0 "Expertise: New Worlds"
  leader_trait_expertise_new_worlds_machine_desc:1 "This unit is focused on discovering new technologies for settling New Worlds."
- leader_trait_expertise_statecraft_machine:0 "Expertise: Statecraft"
+ leader_trait_expertise_statecraft_machine:0 "เชี่ยวชาญ: การปกครอง"
  leader_trait_expertise_statecraft_machine_desc:0 "This unit is focused on discovery within the field of Statecraft."
  leader_trait_expertise_biology_machine:0 "Expertise: Biology"
  leader_trait_expertise_biology_machine_desc:0 "This unit is focused on discovering new technologies within the field of Biology."
@@ -953,17 +953,17 @@
  leader_trait_irenic_hive_desc:1 "A natural aversion to conflict drives this drone to avoid possible military escalation."
  leader_trait_irenic_machine:0 "Peace Protocols"
  leader_trait_irenic_machine_desc:0 "This unit promotes peace and will attempt to reject all attempts at increasing combat readiness."
- subclass_scientist_explorer_hive:0 "Explorer"
+ subclass_scientist_explorer_hive:0 "นักสำรวจ"
  subclass_scientist_explorer_hive_desc:1 "To explore unknown worlds, catalog new species, and encounter new civilizations - the guiding impulse of this intrepid drone."
- subclass_scientist_explorer_machine:0 "Explorer"
+ subclass_scientist_explorer_machine:0 "นักสำรวจ"
  subclass_scientist_explorer_machine_desc:1 "To explore unknown worlds, catalog new species, and encounter new civilizations - the guiding programming of this intrepid unit."
- subclass_scientist_analyst_hive:0 "Analyst"
+ subclass_scientist_analyst_hive:0 "นักวิเคราะห์"
  subclass_scientist_analyst_hive_desc:1 "Being at the forefront of science, conducting experiments, and researching new technologies to better the hive is the main concern for any determined analyst."
- subclass_scientist_analyst_machine:0 "Analyst"
+ subclass_scientist_analyst_machine:0 "นักวิเคราะห์"
  subclass_scientist_analyst_machine_desc:0 "Being at the forefront of science, conducting experiments, and researching new technologies to improve efficiency is the main concern for any determined analyst."
- subclass_scientist_researcher_hive:0 "Researcher"
+ subclass_scientist_researcher_hive:0 "นักวิจัย"
  subclass_scientist_researcher_hive_desc:1 "Researchers are the main driving force behind the management of research teams and projects. These drones pursue new knowledge relentlessly."
- subclass_scientist_researcher_machine:0 "Researcher"
+ subclass_scientist_researcher_machine:0 "นักวิจัย"
  subclass_scientist_researcher_machine_desc:1 "Researchers are the main driving force behind the management of research teams and projects. These units pursue new knowledge relentlessly."
  leader_trait_physics_focus_hive:0 "Physics Focus"
  leader_trait_physics_focus_hive_desc:0 "This node focuses on Physics research."
@@ -1009,17 +1009,17 @@
  leader_trait_collective_wisdom_2_hive_desc:0 "$leader_trait_collective_wisdom_hive_desc$"
  leader_trait_collective_wisdom_2_machine:0 "$leader_trait_collective_wisdom_machine$ II"
  leader_trait_collective_wisdom_2_machine_desc:0 "$leader_trait_collective_wisdom_machine_desc$"
- subclass_admiral_aggressor_hive:0 "Aggressor"
+ subclass_admiral_aggressor_hive:0 "ผู้รุกราน"
  subclass_admiral_aggressor_hive_desc:1 "Offense is the best defense. Aggressors are known for their relentless attacks, annihilating enemy fleets before they can counter."
- subclass_admiral_aggressor_machine:0 "Aggressor"
+ subclass_admiral_aggressor_machine:0 "ผู้รุกราน"
  subclass_admiral_aggressor_machine_desc:0 "$subclass_admiral_aggressor_hive_desc$"
- subclass_admiral_tactician_hive:0 "Tactician"
+ subclass_admiral_tactician_hive:0 "นักกลยุทธ์"
  subclass_admiral_tactician_hive_desc:0 "This drone is especially cunning. Their tactics are designed to mitigate enemy strengths and outsmart their commanders."
- subclass_admiral_tactician_machine:0 "Tactician"
+ subclass_admiral_tactician_machine:0 "นักกลยุทธ์"
  subclass_admiral_tactician_machine_desc:0 "$subclass_admiral_tactician_hive_desc$"
- subclass_admiral_strategist_hive:0 "Strategist"
+ subclass_admiral_strategist_hive:0 "นักยุทธศาสตร์"
  subclass_admiral_strategist_hive_desc:0 "Strategists are focused on the bigger picture. Instead of leading the battle up front, they prefer to maintain cohesion in the military and draw galaxy-spanning war plans."
- subclass_admiral_strategist_machine:0 "Strategist"
+ subclass_admiral_strategist_machine:0 "นักยุทธศาสตร์"
  subclass_admiral_strategist_machine_desc:0 "$subclass_admiral_strategist_hive_desc$"
  leader_trait_cautious_hive:0 "Cautious"
  leader_trait_cautious_hive_desc:0 "This drone exhibits extremely cautious behavior."
