--- a/mod/thmod/localisation/english/technology_l_english.yml
+++ b/mod/thmod/localisation/english/technology_l_english.yml
@@ -18,7 +18,7 @@
  metaphysics:0 "อภิปรัชญา"
  metaphysics_desc:0 "Far out."
  statecraft:0 "การปกครอง"
- statecraft_desc:0 "The art of building a successful society."
+ statecraft_desc:0 "ศิลปะแห่งการสร้างสังคมที่ประสบความสำเร็จ"
  biology:0 "ชีววิทยา"
  biology_desc:0 "The science of life, in its many forms and complexities."
  military_theory:0 "ทฤษฎีทางทหาร"
