--- a/mod/thmod/localisation/english/traditions_l_english.yml
+++ b/mod/thmod/localisation/english/traditions_l_english.yml
@@ -224,7 +224,7 @@
  tr_supremacy_master_shipwrights_machine_desc:0 "$tr_supremacy_master_shipwrights_desc$"
  tr_supremacy_master_shipwrights_machine_delayed:0 "With a large inventory of prefabricated hull sections, built to be interchangeable, our fleet construction effort will be rationalized."
  tr_supremacy_war_games:0 "เกมสงคราม"
- tr_supremacy_war_games_desc:4 "§Y$MOD_COMMAND_LIMIT_ADD$§! increased by §G+20§! and §Y$MOD_LEADER_ADMIRAL_SKILL_LEVELS$§! is increased by §Y2§!."
+ tr_supremacy_war_games_desc:4 "§Y$MOD_COMMAND_LIMIT_ADD$§! เพิ่มขึ้น §G+20§! และ §Y$MOD_LEADER_ADMIRAL_SKILL_LEVELS$§! เพิ่มขึ้น §Y2§!"
  tr_supremacy_war_games_delayed:0 "A strong war game tradition has taken root among the senior officers of our fleets, whether the games be computer simulations or actual exercises in space. This has encouraged our admirals to think outside the box, resulting in numerous tactical innovations and new strategies."
  tr_supremacy_war_games_machine_desc:0 "$tr_supremacy_war_games_desc$"
  tr_supremacy_war_games_machine:0 "ลดผลกระทบจากตัวแปรที่เกี่ยวกับการรบ"
@@ -611,7 +611,7 @@
  tr_synthetics_adopt_machine_desc:0 "อนุญาตให้สามารถดัดแปลงเครื่องจักรอื่นให้กลายเป็นเผ่าพันธุ์หลักของเรา"
  tr_synthetics_finish:0 "วัฒนธรรมจักรกลสังเคราะห์สำเร็จ"
  tr_synthetics_finish_desc:0 "£building£ §Yสิ่งปลูกสร้างที่เป็นเมืองหลวง§! ให้งาน £job_roboticist£ §Y$job_roboticist$§! §G+1§!\n$mod_ROBOT_species_trait_picks_add$: §G+1§!\n$TRADITIONS_FINISH_AP$"
- tr_synthetics_finish_machine_desc:1 "All §Y$trait_machine_unit$§! leaders gain the §Y$leader_trait_synthetic$§! trait.\n£building£ §YCapital Buildings§! provide §G+1§! £job_replicator£ §Y$job_replicator$§! Jobs\n$TRADITIONS_FINISH_AP$"
+ tr_synthetics_finish_machine_desc:1 "ผู้นำ §Y$trait_machine_unit$§! ทุกคนจะได้รับคุณลักษณะ §Y$leader_trait_synthetic$§!\n£building£ §Yสิ่งปลูกสร้างที่เป็นเมืองหลวง§! ให้ §G+1§! งาน £job_replicator£ §Y$job_replicator$§!\n$TRADITIONS_FINISH_AP$"
  tr_synthetics_maintenance_protocols:0 "โปรโตคอล-บำรุงรักษา"
  tr_synthetics_maintenance_protocols_delayed:0 "Routine preventative maintenance will reduce malfunctions across all robot units."
  tr_synthetics_optimization_algorithms:0 "อัลกอริทึมเพิ่มประสิทธิภาพ"
@@ -629,79 +629,79 @@
  tr_synthetics_solid_state_actuators:0 "ตัวกระตุ้นแบบแข็ง"
  tr_synthetics_solid_state_actuators_delayed:0 "Solid-state actuators improve miniaturization of vital components, allowing robotic units to allocate greater space to additional subsystems."
  requires_tradition_tr_synthetics_adopt:0 "$TRIGGER_FAIL$§Rต้องการ §Y$tr_synthetics_adopt$§!§!"
- tradition_aptitude:0 "Aptitude"
- tradition_aptitude_desc:0 "Our Empire can truly prosper under the guidance of strong leaders."
- tradition_aptitude_hive_desc:0 "The Hive prospers with the aid of its strongest entities."
- tradition_aptitude_machine_desc:0 "High leadership unit proficiency increases Empire greatness potential."
- tr_aptitude_adopt:0 "Aptitude Traditions"
- tr_aptitude_finish:0 "Aptitude Traditions Finished"
- tr_aptitude_finish_desc:0 "Leader Starting Traits: §G+1§!"
- tr_aptitude_the_empire_needs_you:0 "The Empire Needs You!"
+ tradition_aptitude:0 "ความสามารถ"
+ tradition_aptitude_desc:0 "จักรวรรดิของเราสามารถรุ่งเรืองได้อย่างแท้จริงภายใต้การนำของผู้นำที่แข็งแกร่ง"
+ tradition_aptitude_hive_desc:0 "รังที่เจริญรุ่งเรืองด้วยความช่วยเหลือของสิ่งที่แข็งแกร่งที่สุด"
+ tradition_aptitude_machine_desc:0 "ความสามารถของยูนิตผู้นำระดับสูงจะเพิ่มศักยภาพความยิ่งใหญ่ของจักรวรรดิ"
+ tr_aptitude_adopt:0 "วัฒนธรรมความสามารถ"
+ tr_aptitude_finish:0 "วัฒนธรรมความสามารถสำเร็จ"
+ tr_aptitude_finish_desc:0 "คุณลักษณะเริ่มต้นของผู้นำ: §G+1§!"
+ tr_aptitude_the_empire_needs_you:0 "จักรวรรดิต้องการคุณ!"
  tr_aptitude_the_empire_needs_you_delayed:0 "Many young people dream of becoming one of the revered leaders of the empire."
- tr_aptitude_the_empire_needs_you_hive:0 "Rise from the Crowd"
+ tr_aptitude_the_empire_needs_you_hive:0 "ลุกขึ้นจากฝูง"
  tr_aptitude_the_empire_needs_you_hive_delayed:0 "Evolving potential leaders is paramount to our greatness."
- tr_aptitude_the_empire_needs_you_machine:0 "Rise from the Crowd"
+ tr_aptitude_the_empire_needs_you_machine:0 "ลุกขึ้นจากฝูง"
  tr_aptitude_the_empire_needs_you_machine_delayed:0 "Our maximum potential can only be achieved by manufacturing more adept leaders for the empire."
- tr_aptitude_specialist_training:0 "Specialist Training"
+ tr_aptitude_specialist_training:0 "การฝึกผู้เชี่ยวชาญ"
  tr_aptitude_specialist_training_delayed:0 "Rigorous training programs ensure our leaders have all the necessary tools to flourish."
  tr_aptitude_specialist_training_hive:0 "$tr_aptitude_specialist_training$"
  tr_aptitude_specialist_training_hive_delayed:0 "Rigorous conditioning ensures the success of the hive's specialized members."
- tr_aptitude_specialist_training_machine:0 "Software Update"
+ tr_aptitude_specialist_training_machine:0 "อัปเดตซอฟต์แวร์"
  tr_aptitude_specialist_training_machine_delayed:0 "New and up-to-date programs ensure our leaders have all the necessary tools to perform as expected."
- tr_aptitude_psychological_profiling:0 "Psychological Profiling"
+ tr_aptitude_psychological_profiling:0 "การทำโปรไฟล์ทางจิตวิทยา"
  tr_aptitude_psychological_profiling_delayed:0 "Knowing our leaders' fears and weaknesses allow us to take preventive measures from them to take hold."
- tr_aptitude_psychological_profiling_hive:0 "Behavioral Diagnostics"
+ tr_aptitude_psychological_profiling_hive:0 "การวินิจฉัยพฤติกรรม"
  tr_aptitude_psychological_profiling_hive_delayed:0 "Identifying deviant weaknesses allows us to take preventive measures to negate them."
- tr_aptitude_psychological_profiling_machine:0 "Memory Diagnostics"
+ tr_aptitude_psychological_profiling_machine:0 "การวินิจฉัยข้อบกพร่องของหน่วยความจำ"
  tr_aptitude_psychological_profiling_machine_delayed:0 "In-depth scans allow us to take preventive measures against malfunctions before they arise."
- tr_aptitude_healthcare_program:0 "Healthcare Program"
+ tr_aptitude_healthcare_program:0 "โปรแกรมการดูแลสุขภาพ"
  tr_aptitude_healthcare_program_delayed:0 "Through continuous health parameter monitoring, we tailor everything from exercise and diet to invasive surgical procedures to get the most from our leaders."
- tr_aptitude_healthcare_program_hive:0 "Physical Maintenance"
+ tr_aptitude_healthcare_program_hive:0 "การบำรุงรักษาทางกายภาพ"
  tr_aptitude_healthcare_program_hive_delayed:0 "Specialized drones deemed more valuable should use some of their functions to care for their bodies, and be allowed to consume higher quality nutrition."
- tr_aptitude_healthcare_program_machine:0 "Preventive Maintenance"
+ tr_aptitude_healthcare_program_machine:0 "การบำรุงรักษาเชิงป้องกัน"
  tr_aptitude_healthcare_program_machine_delayed:0 "Through continuous system monitoring, we can manage everything from back-up frequency to intensive repair procedures to get the most of our leaders."
- tr_aptitude_champions_of_the_empire:0 "Champions of the Empire"
+ tr_aptitude_champions_of_the_empire:0 "แชมเปี้ยนของจักรวรรดิ"
  tr_aptitude_champions_of_the_empire_delayed:0 "We trust our leaders and give them absolute power to influence how our Empire is run."
- tr_aptitude_champions_of_the_empire_hive:0 "Minute autonomy"
+ tr_aptitude_champions_of_the_empire_hive:0 "การควบคุมตนเองช่วงเวลาสั้นๆ"
  tr_aptitude_champions_of_the_empire_hive_delayed:0 "The Hive is willing to impart a minute level of autonomy for its strongest elements for the good of the whole"
- tr_aptitude_champions_of_the_empire_machine:0 "Administrative Rights"
+ tr_aptitude_champions_of_the_empire_machine:0 "สิทธิ์ของผู้ดูแลระบบ"
  tr_aptitude_champions_of_the_empire_machine_delayed:0 "We trust the unique sub-routines of our leaders and give them permission to influence how the Empire is run."
- tr_aptitude_champions_of_the_empire_desc:0 "Per $admiral_with_icon$ and $general_with_icon$\n$t$$MOD_COUNTRY_NAVAL_CAP_ADD$: §G+2§!\nPer $governor_with_icon$\n$t$$MOD_EMPIRE_SIZE_MULT$: §G-2%§!\nPer $scientist_with_icon$\n$t$$MOD_LEADER_SPECIES_EXP_GAIN$: §G+2%§!"
- tradition_statecraft:0 "Statecraft"
- tradition_statecraft_desc:0 "A powerful Council allows for our empire to be more responsive."
+ tr_aptitude_champions_of_the_empire_desc:0 "$admiral_with_icon$ และ $general_with_icon$ แต่ละคน\n$t$$MOD_COUNTRY_NAVAL_CAP_ADD$: §G+2§!\n $governor_with_icon$ แต่ละคน\n$t$$MOD_EMPIRE_SIZE_MULT$: §G-2%§!\n$scientist_with_icon$ แต่ละตน\n$t$$MOD_LEADER_SPECIES_EXP_GAIN$: §G+2%§!"
+ tradition_statecraft:0 "การปกครอง"
+ tradition_statecraft_desc:0 "สภาที่ทรงพลังช่วยให้จักรวรรดิของเราตอบสนองได้มากขึ้น"
  tradition_statecraft_hive_desc:0 "The Council of Voices defines our empire."
  tradition_statecraft_machine_desc:0 "The Assembly of Conciousness defines our empire."
- tr_statecraft_adopt:0 "Statecraft Traditions"
- tr_statecraft_finish:0 "Statecraft Traditions Finished"
- tr_statecraft_constitutional_focus:0 "Constitutional Focus"
- tr_statecraft_constitutional_focus_hive:0 "Strategic Focus"
+ tr_statecraft_adopt:0 "วัฒนธรรมการปกครอง"
+ tr_statecraft_finish:0 "วัฒนธรรมการปกครองสำเร็จ"
+ tr_statecraft_constitutional_focus:0 "โฟกัสรัฐธรรมนูญ"
+ tr_statecraft_constitutional_focus_hive:0 "โฟกัสกลยุทธ์"
  tr_statecraft_constitutional_focus_machine:0 "$tr_statecraft_constitutional_focus_hive$"
  tr_statecraft_constitutional_focus_delayed:0 "With a clear focus on our empire's needs, we can ease the administrative burden of our councilors."
  tr_statecraft_constitutional_focus_hive_delayed:0 "Strategic Agendas are set more decisively, allowing the voices to align faster."
  tr_statecraft_constitutional_focus_machine_delayed:0 "With an acute focus on our current agenda, we can improve the computing performance of our core intelligence."
- tr_statecraft_inspiring_agendas:0 "Inspiring Agendas"
- tr_statecraft_inspiring_agendas_hive:0 "Versatile Agendas"
+ tr_statecraft_inspiring_agendas:0 "วาระที่สร้างแรงบันดาลใจ"
+ tr_statecraft_inspiring_agendas_hive:0 "วาระที่หลากหลาย"
  tr_statecraft_inspiring_agendas_machine:0 "$tr_statecraft_inspiring_agendas_hive$"
  tr_statecraft_inspiring_agendas_delayed:0 "There has never been a lack of ideas of how the empire can direct our own future."
  tr_statecraft_inspiring_agendas_hive_delayed:0 "The versatility of the Hive Mind is paramount for directing the future."
  tr_statecraft_inspiring_agendas_machine_delayed:0 "In a universe filled with infinite choices, we must find a subset that can benefit our empire."
- tr_statecraft_inspiring_agendas_desc:0 "§HUnlocks Agenda:§! $council_agenda_agenda_rightful_claims_name$\n§HUnlocks Agenda:§! $council_agenda_agenda_oppose_the_fallen_name$"
- tr_statecraft_immutable_directives:0 "Immutable Directives"
+ tr_statecraft_inspiring_agendas_desc:0 "§Hปลดล็อกแผนการ:§! $council_agenda_agenda_rightful_claims_name$\n§Hปลดล็อกแผนการ:§! $council_agenda_agenda_oppose_the_fallen_name$"
+ tr_statecraft_immutable_directives:0 "เข้าใจจุดประสงค์ชัดเจน"
  tr_statecraft_immutable_directives_delayed:0 "The fundamental understanding of direction and purpose is always clear, allowing us to shift focus without losing the progress we have made."
- tr_statecraft_amongst_peers:0 "Amongst Peers"
- tr_statecraft_amongst_peers_hive:0 "Propagated Insights"
+ tr_statecraft_amongst_peers:0 "ในท่ามกลางผู้นำ"
+ tr_statecraft_amongst_peers_hive:0 "ข้อมูลเชิงลึกที่เผยแพร่"
  tr_statecraft_amongst_peers_machine:0 "$tr_statecraft_amongst_peers_hive$"
  tr_statecraft_amongst_peers_delayed:0 "Trust, respect, and learning from mistakes are held to the highest standards even at the top echelons of our empire."
  tr_statecraft_amongst_peers_hive_delayed:0 "Multiple aspects of the conciousness should never make the same mistakes."
  tr_statecraft_amongst_peers_machine_delayed:0 "$tr_statecraft_amongst_peers_hive_delayed$"
- tr_statecraft_shared_benefits:0 "Shared Benefits"
- tr_statecraft_shared_benefits_hive:0 "Shared Deduction"
- tr_statecraft_shared_benefits_machine:0 "Shared Computations"
+ tr_statecraft_shared_benefits:0 "ผลประโยชน์ร่วมกัน"
+ tr_statecraft_shared_benefits_hive:0 "การอนุมานร่วมกัน"
+ tr_statecraft_shared_benefits_machine:0 "การคำนวณร่วมกัน"
  tr_statecraft_shared_benefits_delayed:0 "By involving all leaders in the implementation of our agendas, they build a stronger understanding for their roles and purpose."
  tr_statecraft_shared_benefits_hive_delayed:0 "By utilizing all nodes and leaders in the implementation of our agendas, any useful specialization is propagated faster."
  tr_statecraft_shared_benefits_machine_delayed:0 "$tr_statecraft_shared_benefits_hive_delayed$"
- tr_statecraft_shared_benefits_desc:0 "Whenever an §YAgenda§! is Launched:\n$t$$tr_statecraft_shared_benefits_effect_desc$"
- tr_statecraft_shared_benefits_effect_desc:0 "All Leaders gain $@statecraft_amongst_peers_exp_reward|G0$ experience"
+ tr_statecraft_shared_benefits_desc:0 "เมื่อใดก็ตามที่เริ่ม §Yแผน§!:\n$t$$tr_statecraft_shared_benefits_effect_desc$"
+ tr_statecraft_shared_benefits_effect_desc:0 "ผู้นำทุกคนได้รับค่าประสบการณ์ $@statecraft_amongst_peers_exp_reward|G0$"
  tradition_politics:0 "การเมือง"
  tradition_politics_desc:0 "เวทีการเมืองกาแล็กซีถูกกำหนดขึ้นและเราตั้งใจที่จะมีบทบาทนำ"
  tr_politics_adopt:0 "วัฒนธรรม$tradition_politics$"
