--- a/mod/thmod/localisation/english/triggers_effects_l_english.yml
+++ b/mod/thmod/localisation/english/triggers_effects_l_english.yml
@@ -225,7 +225,7 @@
  HAS_GOVERNMENT_ICON_TIP:0 "This option is available due to $WHO|H$ being a $GOV|Y$"
  LEADER_IS_COUNCILOR:0 "Is on the Council"
  LEADER_IS_NOT_COUNCILOR:0 "Is NOT on the Council"
- LEADER_ISWAS_COUNCILOR_SHORT:0 "Councilor"
+ LEADER_ISWAS_COUNCILOR_SHORT:0 "สมาชิกสภา"
  LEADER_IS_COUNCILOR_TYPE:0 "Assigned as $COUNCILORTYPE|Y$"
  LEADER_IS_NOT_COUNCILOR_TYPE:0 "Not assigned as $COUNCILORTYPE|Y$"
  ETHIC_REPRESENTED_ON_COUNCIL:1 "$ETHIC$ ethic represented in the Council"
@@ -393,7 +393,7 @@
  effect_random_system:0 "Random System"
  ANY_SYSTEM_WITHIN_BORDERS:0 "Any System within borders"
  any_system_within_border_trigger:0 "$ANY_SYSTEM_WITHIN_BORDERS$"
- any_archaeological_site_trigger:0 "Any Archaeological Site"
+ any_archaeological_site_trigger:0 "แหล่งโบราณคดีใดๆ"
  count_system_within_border_trigger:1 "Number of Systems within borders$CONDITIONS$ $IS_NOT$ $COMPARATOR$ $NUM|Y$"
  count_system_within_border_all_trigger:0 "$IS_ALL_NOT$ Systems within borders fulfill the following conditions"
  effect_every_system_within_border:0 "Every System within borders"
@@ -605,7 +605,7 @@
  HAS_NOT_TRUCE_TRIGGER:0 "$COUNTRY|Y$ ไม่มีการพักรบกับ $TARGET|Y$"
  HAS_TRUCE_TRIGGER:0 "$COUNTRY|Y$ has truce with $TARGET|Y$"
  SET_LEADER_AGE_EFFECT:0 "Change the age to $AGE|Y$"
- ADD_LEADER_AGE_EFFECT:0 "Change Leader age by $AGE|Y$ years"
+ ADD_LEADER_AGE_EFFECT:0 "เปลี่ยนอายุผู้นำ $AGE|Y$ ปี"
  SET_LEADER_IMMORTAL_EFFECT:0 "Becomes immortal"
  SET_LEADER_MORTAL_EFFECT:0 "Becomes mortal"
  IS_IMMORTAL_TRIGGER:0 "Is immortal"
@@ -1125,8 +1125,8 @@
  SET_ORIGIN:0 "Origin set to $ORIGIN|Y$\n"
  SET_GOVERNMENT_COOLDOWN_EFFECT:0 "Government is locked for $DAYS$ days\n"
  REMOVE_GOVERNMENT_COOLDOWN_EFFECT:0 "Government is unlocked\n"
- RESET_POLICY_COOLDOWNS_EFFECT:1 "Policies are unlocked\n"
- UNLOCK_COUNCIL_SLOT:0 "Unlocks $AMOUNT|Y$ Councilor Slot(s)"
+ RESET_POLICY_COOLDOWNS_EFFECT:1 "ปลดล็อกนโยบาย\n"
+ UNLOCK_COUNCIL_SLOT:0 "ปลดล็อกช่องสมาชิกสภา $AMOUNT|Y$ ช่อง"
  ADD_SKILL:1 "สกิลเลเวลของ $LEADER$ เปลี่ยน $AMOUNT|Y$\n"
  SET_SKILL:1 "สกิลเลเวลของ $LEADER$ กำหนดเป็น $AMOUNT|Y$\n"
  SET_RING_YES:0 "Adds a ring around the planet\n"
@@ -1206,7 +1206,7 @@
  END_EVENT_CHAIN_EFFECT:1 "Ends the $NAME$ Event Chain.\n\n"
  SHIFT_ETHIC_EFFECT:0 "\n$COUNTRY|Y$ shifts its ethics towards $ETHIC|Y$\n"
  CHANGE_BACKGROUND_ETHIC:0 "Change Leader Ethic to $ETHIC|Y$"
- SET_COUNCIL_POSITION_EFFECT:0 "Assigns Leader to Council as $POSITION|Y$"
+ SET_COUNCIL_POSITION_EFFECT:0 "กำหนดผู้นำให้กับสภาในตำแหน่ง $POSITION|Y$"
  ADD_ETHIC_EFFECT:0 "\nได้รับจริยธรรม $ETHIC|Y$\n"
  CLEAR_ETHOS_EFFECT:0 "จริยธรรมทั้งหมดจะถูกลบ"
  REMOVE_ETHIC_EFFECT:1 "จริยธรรม $ETHIC|Y$ หายไป\n"
@@ -1272,9 +1272,9 @@
  ASSIGN_LEADER_EFFECT:0 "$LEADER$ is assigned as leader"
  UNASSIGN_LEADER_EFFECT:0 "$LEADER$ ถูกปลดจากผู้นำแล้ว"
  SET_YEARS_SERVED_EFFECT:0 "เปลี่ยนอายุงาน(ปี)เพื่อให้ตรงกันกับ $LEADER|Y$"
- EXILE_LEADER_EFFECT:0 "$LEADER$ is exiled"
- SET_LEADER_EFFECT:0 "$LEADER$ is set as leader"
- SET_FEDERATION_LEADER_EFFECT:0 "$COUNTRY|Y$ becomes leader of $FEDERATION|Y$"
+ EXILE_LEADER_EFFECT:0 "$LEADER$ ถูกเนรเทศ"
+ SET_LEADER_EFFECT:0 "$LEADER$ ถูกกำหนดให้เป็นผู้นำ"
+ SET_FEDERATION_LEADER_EFFECT:0 "$COUNTRY|Y$ กลายเป็นผู้นำของ $FEDERATION|Y$"
  PREVENT_ANOMALY:0 "Prevent Anomalies"
  PREVENT_ANOMALY_NOT:0 "Allow Anomalies"
  EVERY_RIM_SYSTEM_EFFECT:0 "Every system on the galactic rim"
@@ -1389,9 +1389,9 @@
  any_system_megastructure_trigger:0 "Any Megastructure in System"
  effect_random_system_megastructure:0 "Random Megastructure in System"
  effect_every_system_megastructure:0 "Every Megastructure in System"
- any_pool_leader_trigger:0 "Any recruitable Leader"
- effect_random_pool_leader:0 "Random recruitable Leader"
- effect_every_pool_leader:0 "Every recruitable Leader"
+ any_pool_leader_trigger:0 "ผู้นำใดๆที่สรรหามาได้"
+ effect_random_pool_leader:0 "ผู้นำที่สรรหามาได้แบบสุ่ม"
+ effect_every_pool_leader:0 "ผู้นำที่สรรหาได้ทุกคน"
  set_halted_effect:0 "Megastructure halted $DAYS|Y$ days."
  NUM_TRADITION_CATEGORIES:0 "Has unlocked $COMPARATOR$ $VALUE|Y$ Tradition Categories"
  NUM_TRADITION_CATEGORIES_NOT:0 "Has NOT unlocked $COMPARATOR$ $VALUE|Y$ Tradition Categories"
@@ -1792,7 +1792,7 @@
  effect_every_council_member:0 "Every Council Member"
  count_council_member_trigger:0 "Number of Council Members$CONDITIONS$ $IS_NOT$ $COMPARATOR$ $NUM|Y$"
  count_council_member_all_trigger:0 "$IS_ALL_NOT$ Council Members fulfill the following conditions"
- add_council_agenda_progress_effect_desc:0 "Council Agenda progressed by $VALUE$"
+ add_council_agenda_progress_effect_desc:0 "ความคืบหน้าแผนการของสภา $VALUE$"
  effect_random_fleet_in_orbit:0 "Random Fleet in Orbit"
  effect_every_fleet_in_orbit:0 "Every Fleet in Orbit"
  NUM_FALLEN_EMPIRES_LESS_THAN:0 "จำนวนจักรวรรดิฟอลเล็น ($VAL0|Y$) $COMPARE$ $VAL1|Y$"
@@ -1921,7 +1921,7 @@
  HAS_LOYALTY_AT_LEAST:0 "$SUBJECT|H$ has $COMPARE$ $VAL1|2Y$ loyalty"
  HAS_MONTHLY_LOYALTY_LESS_THAN:0 "$SUBJECT|H$ ความภักดีต่อเดือนไม่ $COMPARE$ $VAL1|2Y$"
  HAS_MONTHLY_LOYALTY_AT_LEAST:0 "$SUBJECT|H$ ความภักดีต่อเดือน $COMPARE$ $VAL1|2Y$"
- effect_every_archaeological_site:1 "Every Archaeological Site"
+ effect_every_archaeological_site:1 "ทุกแหล่งโบราณคดี"
  AWARENESS_TRIGGER:0 "Awareness is $COMPARE$ $VALUE|Y$"
  AWARENESS_NOT_TRIGGER:0 "Awareness is NOT $COMPARE$ $VALUE|Y$"
  AWARENESS_STAGE_TRIGGER:0 "Awareness level is $COMPARE$ $STAGE|Y$"
