--- a/mod/thmod/localisation/english/dlc_recommendations_l_english.yml
+++ b/mod/thmod/localisation/english/dlc_recommendations_l_english.yml
@@ -150,4 +150,4 @@
  PARAGON_FEATURES:3 "Features:\n\n- 140+ new leader traits. \n\n- 4 unique Legendary Leaders.\n\n- 16 specialized Renowned Leaders.\n\n- Expanded Council positions and additional Agenda choices.\n\n- A new Origin: Under One Rule.\n\n- 2 new Tradition Trees: Aptitude and Statecraft.\n\n- 8 new Civics: three for Regular empires, three for Megacorps, one for Gestalt empires (both Hive Minds and Machine Intelligences), and one shared by all government types."
  DLC_PARAGON_RECOMMENDATION_DESC:0 "§SGalactic Paragons§! is an expansion focused on leaders, the council managing your empire, and the agendas that influence your objectives on the galactic stage."
  DLC_PARAGON_RECOMMENDATION_REC:0 "We're recommending §SGalactic Paragons§! as some of the choices you've selected suit its content."
- HIDE_UNOWNED_CONTENT:0 "ซ่อนเนื้อหาที่ไม่ได้เป็นเจ้าของ DLC"
+ HIDE_UNOWNED_CONTENT:0 "ซ่อนเนื้อหาที่ไม่ได้เป็นเจ้าของ"
