--- a/mod/thmod/localisation/english/situations_l_english.yml
+++ b/mod/thmod/localisation/english/situations_l_english.yml
@@ -320,7 +320,7 @@
  string_gravitational_pull:0 "Gravitational Pull"
  country_situations:0 "สถานการณ์"
  mod_country_situations_sr_dark_matter_produces_add:0 "$mod_country_base_sr_dark_matter_produces_add$"
- mod_country_situations_physics_research_produces_add:0 "Monthly £physics_research£ Physics Research"
+ mod_country_situations_physics_research_produces_add:0 "£physics_research£ การวิจัยทางฟิสิกส์ต่อเดือน"
  mutiny_tooltip:1 "We have lost control of the space station."
  gestalt_black_hole_good:0 "Transcended Consciousness"
  gestalt_black_hole_good_desc:1 "A fragment of our [Owner.GetBrainName] is lodged in the event horizon of a black hole, where a single second stretches into an eon. The time difference has its uses."
